fix(project) equal spacing between project tags

--- a/site/web/app/themes/smart-city/resources/assets/styles/layouts/_proiect.scss
+++ b/site/web/app/themes/smart-city/resources/assets/styles/layouts/_proiect.scss
@@ -99,6 +99,7 @@ article.type-proiect .intro .intro-footer .eticheta {
   text-transform: uppercase;
   font-size: 0.8rem;
   opacity: 0.8;
+  margin-right: 24px;
 }
 
 article.type-proiect .intro .intro-footer .eticheta .pictograma {
